project section done

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
   --color-card-bg: #f3f4f6;
   --color-border: #e5e7eb;
   --color-nav: #ffffff;
+  --color-tabs: #0000001A;
 }
 
 :root[class~="dark"] {
@@ -25,6 +26,7 @@
   --color-card-bg: #1f2937;
   --color-border: #374151;
   --color-nav: #000000;
+  --color-tabs: #FFFFFF1A;
 }
 
 html {
@@ -89,6 +91,24 @@ nav a.active, nav a:hover {
 .icon {
   width: 20px;
   fill: var(--color-text-secondary);
+}
+
+/* .indicator-text {
+  position: relative;
+}
+
+.indicator-text::before {
+  content: "";
+  position: absolute;
+  top: 1/;
+} */
+
+.project-btn {
+  background: none;
+  border: none;
+  outline: none;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 
