project section responsive

--- a/output.css
+++ b/output.css
@@ -258,6 +258,9 @@
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
   }
+  .mx-20 {
+    margin-inline: calc(var(--spacing) * 20);
+  }
   .mx-40 {
     margin-inline: calc(var(--spacing) * 40);
   }
@@ -362,6 +365,12 @@
   }
   .max-w-4xl {
     max-width: var(--container-4xl);
+  }
+  .max-w-150 {
+    max-width: calc(var(--spacing) * 150);
+  }
+  .max-w-\[600px\] {
+    max-width: 600px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -957,9 +966,19 @@
       margin-inline: calc(var(--spacing) * 40);
     }
   }
+  .lg\:w-1\/2 {
+    @media (width >= 64rem) {
+      width: calc(1/2 * 100%);
+    }
+  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
+    }
+  }
+  .lg\:flex-row-reverse {
+    @media (width >= 64rem) {
+      flex-direction: row-reverse;
     }
   }
   .dark\:block {
